# linear_layered_model

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
notebooks/: Plots_Manuscript.ipynb  Run_nlayer_model.ipynb
src/linlayermodel/: LLMParams.py  PlotSTM.py  QTCMParams.py  parameter_perturbation.py  thermodynamic_functions.py
src/linlayermodel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/linlayermodel/data/: par.out  twparmbeatmC2_mean_values.nc
